# Alpha-Loop-LLM

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  AGENT_GRADING_GUIDE.md  AGENT_RELATIONSHIPS.md  API_KEY_UPDATE_INSTRUCTIONS.md  API_MIGRATION_SUMMARY.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_GITHUB_ENV_SETUP.md  CHRIS_SETUP.txt  CODEBASE_CLEANUP_2025-12-09.md  CODE_REVIEW_REPORT.md  COMMIT_CHECKLIST.md  COMPETITIVE_ANALYSIS_9.6.md  COMPLETE_COMMAND_REFERENCE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_DATA_GUIDE.md  CROSS_PLATFORM_COMMANDS.md  CURRENT_PORTFOLIO_STATUS.md  DATA_EDGE_SUMMARY.md  DECEMBER_2025_STATUS_SUMMARY.txt  DUAL_MACHINE_TRAINING.md  ENV_FILE_UPDATES.md  ENV_TEMPLATE.md  EXECUTION_PLAN_11_PERCENT.md  EXECUTION_PLAN_17PCT_RECOVERY.md  EXECUTION_PLAN_PROFIT_TAKING.md  FINAL_DEPLOYMENT_CHECKLIST.md  FULL_THROTTLE_SETUP.md  FUND_SETUP_COMPLETE.md  GITHUB_PRIVATE_SETUP.md  GRADING_EXPLAINED.md  HEDGE_FUND_SETUP.md  IBKR_API_SETUP.md  LAUNCH_CHECKLIST_930AM.md  LOCAL_VS_WORKTREE_VS_CLOUD.md  LOCAL_WORKTREE_CLOUD_GUIDE.txt  MAC_TRAINING_GUIDE.md  MASTER_OPERATIONS_GUIDE.md  MULTI_MACHINE_SETUP.md  (+46 more)
.claude/: settings.local.json
.claude/commands/: review.md
.cursor/commands/: fix.md  review.md
.cursor/review-reports/: review_2025-12-10.md  review_command_audit.md
.github/: BRANCH_STRATEGY.md
.github/workflows/: cd.yml  ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
clone-project/: README.md
clone-project/backend/: README.md  main.py  models.py  requirements.txt
clone-project/docs/: API_DOCUMENTATION.md  COMPONENT_LIBRARY.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  LAUNCH_PLAN.md  LAUNCH_REPORT.md  MARKETING_STRATEGY.md  MESSAGING.md  MONITORING.md  PRD.md  ROADMAP.md  SEO_STRATEGY.md  USER_FLOWS.md
clone-project/frontend/: package.json  tsconfig.json
clone-project/scripts/: deploy_tonight.sh
config/: __init__.py  api_config.yaml  azure_config.yaml  azure_monitoring.yaml  data_sources.md  env_template.env  env_template.py  logging_config.yaml  model_config.yaml  secrets.py.example  settings.py  trading_config.yaml
data/author_training/: ALC_RESEARCH_ARTICLES.md  NEW_PIECES_BATCH_1.md  PERSONAL_SUBSTACK_ARTICLES.md  TOM_STYLE_GUIDE.md
database/: alc_schema.sql  setup_database.ps1
docker/: Dockerfile.dev  Dockerfile.prod
docs/: ACADEMIC_PAPER.md  AGENT_RELATIONSHIPS.md  API_REFERENCE.md  ARCHITECTURE.md  AZURE_SETUP_GUIDE.md  CURSOR_API_SETUP.md  DATA_GUIDE.md  GITHUB_AUTH_SETUP.md  Mac_instructions.md  SETUP.md  TRAINING.md  data_sources.md
docs/agents/: AGENTS_DAY_0_SKILLS_REPORT.md  AGENT_PHILOSOPHY.md
docs/archive/: DAY_0_LOG.md  LAUNCH_SUMMARY.md
docs/azure/: AZURE_COMPLETE_SETUP.md  AZURE_DEPLOYMENT.md  AZURE_SETUP.md  COMPLETE_SETUP.md
docs/clone_analysis/: ACA_INIT.md  COMPETITIVE_LANDSCAPE.md  FINANCIAL_MODEL.md  MARKET_RESEARCH.md  PRICING_STRATEGY.md  SELECTED_PRODUCT.md  TEAM_INITIALIZATION.md
docs/clone_project/: ARCHITECTURE.md
docs/project/: ALC_MANIFESTO.md  BRANCHING_STRATEGY.md  GAP_ANALYSIS.md  GITHUB_PROJECT.md
docs/setup/: GITHUB_SETUP.md  INSTRUCTIONS.md  QUICKSTART.md  SETUP.md  TRAINING_GUIDE.md  TRAINING_WORKFLOW.md
infra/azure/: setup.sh
infrastructure/: setup_azure.sh
infrastructure/terraform/: .gitignore  README.md  main.tf  terraform.tfvars.example  variables.tf
launches/: __init__.py
launches/compliance_shield/: __init__.py  app.py
launches/flashpage/: __init__.py  app.py
launches/microfunnel/: __init__.py  app.py
products/: __init__.py
products/deep_pulse/: __init__.py  app.py  frontend.py  requirements.txt  sentiment.py
products/prompt_forge/: __init__.py  app.py  frontend.py  models.py  requirements.txt
products/ship_fast/: __init__.py  cli.py  requirements.txt
scripts/: CHECK_MODELS.bat  CHECK_MODEL_GRADES.bat  CHECK_TRADING_READY.bat  CHECK_TRAINING_STATUS.bat  DASHBOARD.bat  HYDRATE_ALPHA_VANTAGE.bat  HYDRATE_FULL_UNIVERSE.bat  HYDRATE_QUICK.bat  INGEST_ALL_DATA.bat  INGEST_RESEARCH.bat  LAUNCH_ALL_PAPER_TRADING.bat  LAUNCH_ALL_TRAINING.bat  LAUNCH_DATA_INGESTION.bat  MASTER_CONTROL.bat  PAPER_TRADE_1_EQUITIES_ETFS.bat  PAPER_TRADE_2_OPTIONS_WARRANTS.bat  PAPER_TRADE_3_FIXED_INCOME_MACRO.bat  PAPER_TRADE_4_CRYPTO_ALT.bat  REFRESH_API_TRAINING_DATA.bat  REVIEW_CODE.bat  START_AGENT_CHAT.bat  START_CHRIS_INTERFACE.bat  START_DATA_COLLECTION.bat  START_LIVE_TRADING.bat  START_PAPER_TRADING.bat  START_TRADING_ENGINE.bat  TRAIN_ALL_AGENTS.bat  TRAIN_FUND_OPS.bat  TRAIN_MASSIVE.bat  __init__.py  analyze_clone_candidates.py  analyze_current_portfolio.py  build_momentum_scanner_full_universe.py  create_fund_accounting_files.py  dashboard.py  diagnose_massive.py  download_academic_papers.py  download_all_us_securities.py  download_all_us_stocks.py  download_datasets.py  (+54 more)
src/: CODE_PATTERNS.py  __init__.py
src/agents/: __init__.py  base_agent.py  growth_agent.py  liquidity_agent.py  macro_agent.py  mean_reversion_agent.py  momentum_agent.py  sentiment_agent.py  value_agent.py  volatility_agent.py
src/analysis/: __init__.py  behavioral_finance.py  research_automation.py  valuation_suite.py  writing_automation.py
src/analytics/: performance_attribution.py  regime_detection.py
src/api_clients/: __init__.py  alpha_vantage_client.py  coinbase_client.py  ibkr_client.py  openai_client.py  slack_client.py
src/app/: __init__.py  hub_app.py
src/backtesting/: backtest_engine.py
src/config/: settings.py  settings_new.py
src/core/: __init__.py  aca_engine.py  agent_base.py  agent_mixin.py  async_utils.py  chain_mapper.py  cross_file_analyzer.py  data_logger.py  elite_grading.py  event_bus.py  generic_agent.py  grading.py  handler_mixin.py  learning_engine.py  learning_optimizer.py  liquidity_distortion.py  logger.py  master_grading.py  narrative_tracker.py  orchestrator.py  passive_flow.py  performance.py  (+2 more)
test-reports/: report.xml
tests/: __init__.py  test_agents.py  test_backtest.py  test_config.py  test_demo_agent.py  test_features.py
vectorstore/: index.faiss  manifest.json  metadata.npy
(+256 files in other folders)
