[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-loop-llm"
version = "1.0.0"
description = "Alpha Loop Capital - Institutional-Grade Algorithmic Trading System"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Tom Hogan", email = "tom@alphaloopcapital.com"},
]
maintainers = [
    {name = "Tom Hogan", email = "tom@alphaloopcapital.com"},
    {name = "Chris Friedman", email = "chris@alphaloopcapital.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    
    # Database
    "sqlalchemy>=2.0",
    "pyodbc>=5.0",
    
    # Logging & Utilities
    "loguru>=0.7",
    "tenacity>=8.2",
    "tqdm>=4.66",
    "joblib>=1.3",
    
    # ML/AI Core
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    
    # Technical Analysis
    "ta>=0.11",
    
    # Trading
    "ib-insync>=0.9.86",
    
    # NLP & Embeddings
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "transformers>=4.35",
    "torch>=2.0",
    
    # Document Processing
    "pypdf>=3.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    
    # APIs & Cloud
    "boto3>=1.33",
    "fredapi>=0.5",
    "dropbox>=11.36",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
alc-collect = "src.data_ingestion.collector:main"
alc-train = "src.ml.train_models:main"
alc-trade = "src.trading.execution_engine:main"
alc-dashboard = "scripts.model_dashboard:main"

[project.urls]
Homepage = "https://alphaloopcapital.com"
Repository = "https://github.com/tjhoags/alpha-loop-llm"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.json", "*.yaml", "*.yml"]

# ============================================================================
# Code Quality Tools
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | catboost_info
    | models
    | logs
    | data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert
    "S311",  # pseudo-random generators
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "catboost_info",
    "models",
    "logs",
    "data",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "catboost_info",
    "models",
    "logs",
    "data",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "live: marks tests that require live API access",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

